--- a/CMgr/Web.config
+++ b/CMgr/Web.config
@@ -9,8 +9,12 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-CMgr-20160817010555.mdf;Initial Catalog=aspnet-CMgr-20160817010555;Integrated Security=True"
+    <!-- <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-CMgr-20160817010555.mdf;Initial Catalog=aspnet-CMgr-20160817010555;Integrated Security=True"
+      providerName="System.Data.SqlClient" /> -->
+    <add name="DefaultConnection" connectionString="Data Source=ATRAIN-LT-331;Initial Catalog=CMgr_db;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+
+   
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
