--- a/CMgr/Web.config
+++ b/CMgr/Web.config
@@ -11,7 +11,7 @@
   <connectionStrings>
     <!-- <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-CMgr-20160817010555.mdf;Initial Catalog=aspnet-CMgr-20160817010555;Integrated Security=True"
       providerName="System.Data.SqlClient" /> -->
-    <add name="DefaultConnection" connectionString="Data Source=ATRAIN-LT-331;Initial Catalog=CMgr_db;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=ATRAIN-LT-331;Initial Catalog=CMgr_Db;Integrated Security=True"
       providerName="System.Data.SqlClient" />
 
    
